--- a/projetos/angular-http/src/app/app.component.html
+++ b/projetos/angular-http/src/app/app.component.html
@@ -36,36 +36,36 @@
     <div class="card add-car">
       <h5 class="card-header">Adicionar/Atualizar carro</h5>
       <div class="card-body">
-        <form id="add-form" (ngSubmit)="f.form.valid && saveCar(f)" #f="ngForm" novalidate>
+        <form id="add-form" (ngSubmit)="fCar.form.valid && saveCar(fCar)" #fCar="ngForm" novalidate>
           <div class="form-group">
             <label for="model">Modelo</label>
             <input type="text" [(ngModel)]="car.model" id="model" name="model" #model="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && model.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fCar.submitted && model.invalid }"
               placeholder="Digite o modelo">
-            <div *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+            <div *ngIf="fCar.submitted && model.invalid" class="invalid-feedback">
               <div *ngIf="model.errors!.required">Modelo é obrigatório</div>
             </div>
           </div>
           <div class="form-group">
             <label for="color">Cor</label>
             <input type="text" [(ngModel)]="car.color" id="color" name="color" #color="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && color.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fCar.submitted && color.invalid }"
               placeholder="Digite a cor">
-            <div *ngIf="f.submitted && color.invalid" class="invalid-feedback">
+            <div *ngIf="fCar.submitted && color.invalid" class="invalid-feedback">
               <div *ngIf="color.errors!.required">Cor é obrigatória</div>
             </div>
           </div>
           <div class="form-group">
             <label for="price">Preço</label>
             <input type="number" [(ngModel)]="car.price" id="price" name="price" #price="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && price.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fCar.submitted && price.invalid }"
               placeholder="Digite o preço">
-            <div *ngIf="f.submitted && price.invalid" class="invalid-feedback">
+            <div *ngIf="fCar.submitted && price.invalid" class="invalid-feedback">
               <div *ngIf="price.errors!.required">Preço é obrigatório</div>
             </div>
           </div>
           <button type="submit" class="btn btn-primary btn-add-car">Salvar</button>
-          <button type="reset" class="btn btn-secondary btn-add-car" (click)="cleanFormCar(f)">Cancelar</button>
+          <button type="reset" class="btn btn-secondary btn-add-car" (click)="cleanFormCar(fCar)">Cancelar</button>
         </form>
       </div>
     </div>
@@ -107,36 +107,36 @@
     <div class="card add-motorcycle">
       <h5 class="card-header">Adicionar/Atualizar moto</h5>
       <div class="card-body">
-        <form id="add-form" (ngSubmit)="f.form.valid && saveMotorcycle(f)" #f="ngForm" novalidate>
+        <form id="add-form" (ngSubmit)="fMoto.form.valid && saveMotorcycle(fMoto)" #fMoto="ngForm" novalidate>
           <div class="form-group">
             <label for="model">Modelo</label>
             <input type="text" [(ngModel)]="motorcycle.model" id="model" name="model" #model="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && model.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fMoto.submitted && model.invalid }"
               placeholder="Digite o modelo">
-            <div *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+            <div *ngIf="fMoto.submitted && model.invalid" class="invalid-feedback">
               <div *ngIf="model.errors!.required">Modelo é obrigatório</div>
             </div>
           </div>
           <div class="form-group">
             <label for="color">Cor</label>
             <input type="text" [(ngModel)]="motorcycle.color" id="color" name="color" #color="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && color.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fMoto.submitted && color.invalid }"
               placeholder="Digite a cor">
-            <div *ngIf="f.submitted && color.invalid" class="invalid-feedback">
+            <div *ngIf="fMoto.submitted && color.invalid" class="invalid-feedback">
               <div *ngIf="color.errors!.required">Cor é obrigatória</div>
             </div>
           </div>
           <div class="form-group">
             <label for="price">Preço</label>
             <input type="number" [(ngModel)]="motorcycle.price" id="price" name="price" #price="ngModel" required
-              class="form-control" [ngClass]="{ 'is-invalid': f.submitted && price.invalid }"
+              class="form-control" [ngClass]="{ 'is-invalid': fMoto.submitted && price.invalid }"
               placeholder="Digite o preço">
-            <div *ngIf="f.submitted && price.invalid" class="invalid-feedback">
+            <div *ngIf="fMoto.submitted && price.invalid" class="invalid-feedback">
               <div *ngIf="price.errors!.required">Preço é obrigatório</div>
             </div>
           </div>
           <button type="submit" class="btn btn-primary btn-add-motorcycle">Salvar</button>
-          <button type="reset" class="btn btn-secondary btn-add-motorcycle" (click)="cleanFormMotorcycle(f)">Cancelar</button>
+          <button type="reset" class="btn btn-secondary btn-add-motorcycle" (click)="cleanFormMotorcycle(fMoto)">Cancelar</button>
         </form>
       </div>
     </div>
